# snake3d-rs

./: Cargo.toml  DEPLOY.md  README.md  build.sh  index.html  server_log.txt  style.css
.github/workflows/: azure-static-web-apps-lemon-stone-0b6b42e1e.yml
api/: package.json
api/scores/: index.js
server/: Cargo.toml  package-lock.json  package.json  scores.json  server.js
server/src/: main.rs
src/: audio.rs  game.rs  leaderboard.rs  lib.rs  renderer.rs
verification/: verify_zoom.py
