[package]
name = "snake3d-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
three-d = "0.16"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
console_log = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "DomTokenList",
    "HtmlAudioElement",
    "AudioContext",
    "OscillatorNode",
    "GainNode",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "OscillatorType",
    "AudioContextState",
    "TouchEvent",
    "TouchList",
    "Touch",
]

[profile.release]
lto = true
opt-level = 'z'
